fix overflow contraint

--- a/css/_sass/base.scss
+++ b/css/_sass/base.scss
@@ -72,7 +72,7 @@ a {
 //-----------------------------------------------------------------
 //  Spying eyes (position indicators for animation & image fallbacks
 
-section {
+body {
   overflow-x: hidden;
 }
 
